WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141941
[Cocoa] Break internal reference cycle in WebCore::Font.
https://bugs.webkit.org/show_bug.cgi?id=141941
Summary
[Cocoa] Break internal reference cycle in WebCore::Font.
Andreas Kling
Reported
2015-02-23 17:37:25 PST
The Cocoa version of Font::platformCreateScaledFont() has a bug where it will return "this" for a 0pt font. This causes a reference cycle when creating a small-caps variant for a 0pt font.
Attachments
Patch
(5.43 KB, patch)
2015-02-23 17:39 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(5.42 KB, patch)
2015-02-23 17:41 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-02-23 17:39:19 PST
<
rdar://problem/19650570
>
Andreas Kling
Comment 2
2015-02-23 17:39:46 PST
Created
attachment 247176
[details]
Patch
Andreas Kling
Comment 3
2015-02-23 17:41:22 PST
Created
attachment 247178
[details]
Patch
Myles C. Maxfield
Comment 4
2015-02-23 17:43:33 PST
Comment on
attachment 247178
[details]
Patch How can we test this?
Andreas Kling
Comment 5
2015-02-23 17:45:55 PST
(In reply to
comment #4
)
> Comment on
attachment 247178
[details]
> Patch > > How can we test this?
I have no idea how to test this in any reliable way.
WebKit Commit Bot
Comment 6
2015-02-24 08:46:35 PST
Comment on
attachment 247178
[details]
Patch Clearing flags on attachment: 247178 Committed
r180561
: <
http://trac.webkit.org/changeset/180561
>
WebKit Commit Bot
Comment 7
2015-02-24 08:46:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug